# GumShoe

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Entity.h  EntityManager.h  GumShoe  GumShoe.sln  GumShoe.vcxproj  GumShoe.vcxproj.filters  LearningOpenGL.sln  LearningOpenGL.vcxproj  LearningOpenGL.vcxproj.filters  Makefile  MySDL3Project  Node.h  NodeManager.h  Note.h  User.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp
GumShoe.dir/Debug/: GumShoe.exe.recipe  GumShoe.ilk
GumShoe.dir/Debug/GumShoe.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LearningOpenGL/x64/Debug/: LearningOpenGL.exe.recipe  LearningOpenGL.ilk  vc143.idb
LearningOpenGL/x64/Debug/LearningOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LearningOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Interactable.cpp  Interactable.h  Node.h  Note.cpp  Note.h  Tool.h  User.cpp  User.h
include/glad/: glad.h
src/: glad.c  main.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
